--- a/result-management/templates/index.html
+++ b/result-management/templates/index.html
@@ -232,5 +232,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/static/js/app.js"></script>
+    <script defer src="https://va.vercel-scripts.com/v1/script.js"></script>
+
 </body>
 </html>
